<resources>
    <string name="app_name">CountryTest</string>

    <string name="flag">Logo</string>
    <string name="countries">Paises</string>
    <string name="search_country">Buscar país</string>
    <string name="detail">Detalle</string>
    <string name="coatOfArms">Escudo</string>
    <string name="capital">Capital</string>
    <string name="subRegion">SubRegión</string>
    <string name="region">Región</string>
    <string name="area">Área</string>
    <string name="currency">Moneda</string>
    <string name="start_of_week">Día de inicio de semana</string>
    <string name="time_zone">Zonas horarias</string>
    <string name="bordering_with">Limita con:</string>
</resources>