<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.countryDetail.CountryDetailFragment">

        <TextView
            android:id="@+id/lblOfficialName"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Republica de Colombia" />

        <com.juantobon20.countrytest.views.custom.SymbolLayout
            android:id="@+id/symbolFlagLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblOfficialName"
            app:title="@string/flag" />

        <com.juantobon20.countrytest.views.custom.SymbolLayout
            android:id="@+id/symbolCoatLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/lblOfficialName"
            app:title="@string/coatOfArms" />

        <com.juantobon20.countrytest.views.custom.HeaderDetailLayout
            android:id="@+id/hdCapital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:headerTitle="@string/capital"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/symbolFlagLayout" />

        <com.juantobon20.countrytest.views.custom.HeaderDetailLayout
            android:id="@+id/hdArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:headerTitle="@string/area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/symbolFlagLayout" />

        <com.juantobon20.countrytest.views.custom.HeaderDetailLayout
            android:id="@+id/hdRegion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:headerTitle="@string/region"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hdCapital" />

        <com.juantobon20.countrytest.views.custom.HeaderDetailLayout
            android:id="@+id/hdSubRegion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:headerTitle="@string/subRegion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/hdArea" />

        <com.juantobon20.countrytest.views.custom.HeaderDetailLayout
            android:id="@+id/hdCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:headerTitle="@string/currency"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hdRegion" />

        <com.juantobon20.countrytest.views.custom.HeaderDetailLayout
            android:id="@+id/hdStartOfWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:headerTitle="@string/start_of_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/hdSubRegion" />

        <com.juantobon20.countrytest.views.custom.RecyclerViewWithTitle
            android:id="@+id/rvTimeZones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hdCurrency"
            app:orientation="horizontal"
            app:recyclerTitle="@string/time_zone"
            app:typeLayoutManager="linearLayout" />

        <com.juantobon20.countrytest.views.custom.RecyclerViewWithTitle
            android:id="@+id/rvBorderingCountries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvTimeZones"
            app:orientation="vertical"
            app:recyclerTitle="@string/bordering_with"
            app:typeLayoutManager="gridLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>